# praxshell

./: .gitignore  README.md  pyproject.toml
praxshell/cli/: cli.py  core_shell.py  ui_elements.py
praxshell/cli/utils/: color_utils.py  display.py  input_parser.py  notebook.py  string_matcher.py
praxshell/config/: constants.py  vault_loader.py
