[project]
name = "praxshell"
version = "0.1.0"
description = "Interactive AI learning shell"
authors = [{ name = "diputs-sudo", email = "diputs-sudo@proton.me" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.9"

[project.scripts]
praxshell = "praxshell.cli.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
